Add new rounds with food comparisons and explanations

--- a/index.html
+++ b/index.html
@@ -229,7 +229,52 @@
         images: ['fufu1.jpg', 'fufu2.jpg', 'fufu3.jpg', 'mashed-potato.jpg'],
         explain: "Mashed potatoes are the odd one out. Fufu is pounded cassava/yam/plantain and eaten with soup; mashed potatoes are whipped and typically eaten with a fork."
       }
-      // Add more rounds after you upload those images.
+      const rounds = [
+  {
+    name: "Banana vs. Plantain",
+    odd: 3,
+    images: [
+      "r02_banana_1.jpg",
+      "r02_banana_2.jpg",
+      "r02_banana_3.jpg",
+      "r02_plantain_odd.jpg"
+    ],
+    explain: "Plantains are starchier and usually cooked; bananas are sweeter and often eaten raw."
+  },
+  {
+    name: "Jollof Rice vs. Fried Rice",
+    odd: 3,
+    images: [
+      "r03_Jollof_1.jpg",
+      "r03_Jollof_2.jpg",
+      "r03_Jollof_3.jpg",
+      "r03_Fried_odd.jpg"
+    ],
+    explain: "Jollof rice is cooked in a tomato-pepper base, giving it a uniform red-orange color and integrated flavor. Fried rice is stir-fried with visible separate grains, vegetables, and often egg."
+  },
+  {
+    name: "Yam vs. Sweet Potato",
+    odd: 3,
+    images: [
+      "r04_Yam_1.jpg",
+      "r04_Yam_2.jpg",
+      "r04_Yam_3.jpg",
+      "r04_sweet_potato_odd.jpg"
+    ],
+    explain: "True yams are starchier with rough brown skin and pale flesh. Sweet potatoes are sweeter, often orange inside, and softer when cooked."
+  },
+  {
+    name: "Ugali vs. Grits",
+    odd: 3,
+    images: [
+      "r05_ugali_1.jpg",
+      "r05_ugali_2.jpg",
+      "r05_ugali_3.jpg",
+      "r05_grits_odd.jpg"
+    ],
+    explain: "Ugali is firm, molded maize porridge meant to be shaped and dipped. Grits are softer, spoonable, and often served creamy."
+  }
+];
     ];
 
     // ==================== STATE ====================
