Fix rounds definition in index.html

--- a/index.html
+++ b/index.html
@@ -221,15 +221,14 @@
     // ==================== CONFIG ====================
     const CHOICE_SECONDS = 10;
 
-    // ==================== ROUNDS ====================
-    const rounds = [
-      {
-        name: "Fufu Variations",
-        odd: 3,
-        images: ['fufu1.jpg', 'fufu2.jpg', 'fufu3.jpg', 'mashed-potato.jpg'],
-        explain: "Mashed potatoes are the odd one out. Fufu is pounded cassava/yam/plantain and eaten with soup; mashed potatoes are whipped and typically eaten with a fork."
-      }
-      const rounds = [
+  // ==================== ROUNDS ====================
+const rounds = [
+  {
+    name: "Fufu Variations",
+    odd: 3,
+    images: ["fufu1.jpg", "fufu2.jpg", "fufu3.jpg", "mashed-potato.jpg"],
+    explain: "Mashed potatoes are the odd one out. Fufu is pounded cassava/yam/plantain and eaten with soup; mashed potatoes are whipped and typically eaten with a fork."
+  },
   {
     name: "Banana vs. Plantain",
     odd: 3,
@@ -275,8 +274,6 @@
     explain: "Ugali is firm, molded maize porridge meant to be shaped and dipped. Grits are softer, spoonable, and often served creamy."
   }
 ];
-    ];
-
     // ==================== STATE ====================
     let currentRound = 0;
     let score = 0;
