Add comparisons for various food items

--- a/index.html
+++ b/index.html
@@ -272,6 +272,82 @@ const rounds = [
       "r05_grits_odd.jpg"
     ],
     explain: "Ugali is firm, molded maize porridge meant to be shaped and dipped. Grits are softer, spoonable, and often served creamy."
+  },  {
+    name: "Agege Bread vs White Bread",
+    odd: 3,
+    images: [
+      "r06_agege_1.jpg",
+      "r06_agege_2.jpg",
+      "r06_agege_3.jpg",
+      "r06_white_bread_odd.jpg"
+    ],
+    explain: "Agege bread is soft, stretchy, and slightly sweet with a distinct yellow hue. Standard white sandwich bread is lighter, drier, and evenly sliced."
+  },
+  {
+    name: "Kisra vs Tortilla",
+    odd: 3,
+    images: [
+      "r07_kisra_1.jpg",
+      "r07_kisra_2.jpg",
+      "r07_kisra_3.jpg",
+      "r07_tortilla_odd.jpg"
+    ],
+    explain: "Kisra is a thin fermented sorghum flatbread with a porous texture. Tortillas are typically wheat or corn-based and not fermented in the same way."
+  },
+  {
+    name: "Banku vs Couscous",
+    odd: 3,
+    images: [
+      "r08_banku_1.jpg",
+      "r08_banku_2.jpg",
+      "r08_banku_3.jpg",
+      "r08_couscous_odd.jpg"
+    ],
+    explain: "Banku is a fermented corn and cassava dough formed into smooth balls. Couscous consists of tiny steamed semolina grains."
+  },
+  {
+    name: "Kenkey vs Tamales",
+    odd: 3,
+    images: [
+      "r09_kenkey_1.jpg",
+      "r09_kenkey_2.jpg",
+      "r09_kenkey_3.jpg",
+      "r09_tamale_odd.jpg"
+    ],
+    explain: "Kenkey is fermented maize dough wrapped in husks and boiled. Tamales are masa-based, often filled, and steamed in husks."
+  },
+  {
+    name: "Lablab vs Lima Beans",
+    odd: 3,
+    images: [
+      "r10_lablab_1.jpg",
+      "r10_lablab_2.jpg",
+      "r10_lablab_3.jpg",
+      "r10_lima_bean_odd.jpg"
+    ],
+    explain: "Lablab beans (hyacinth beans) are typically smaller and darker with varied shapes. Lima beans are flatter, lighter in color, and more uniform."
+  },
+  {
+    name: "Bambara Groundnut vs Peanut",
+    odd: 3,
+    images: [
+      "r11_bambara_1.jpg",
+      "r11_bambara_2.jpg",
+      "r11_bambara_3.jpg",
+      "r11_peanut_odd.jpg"
+    ],
+    explain: "Bambara groundnuts grow underground like peanuts but are rounder and thicker. Peanuts are elongated and typically found in two-lobed shells."
+  },
+  {
+    name: "Cowpea vs Crowder Pea",
+    odd: 3,
+    images: [
+      "r12_cowpea_1.jpg",
+      "r12_cowpea_2.jpg",
+      "r12_cowpea_3.jpg",
+      "r12_crowder_odd.jpg"
+    ],
+    explain: "Cowpeas (like black-eyed peas) are smoother and lighter with a distinct 'eye.' Crowder peas are rounder and packed tightly in pods."
   }
 ];
     // ==================== STATE ====================
