Update cowpea comparison details in index.html

--- a/index.html
+++ b/index.html
@@ -339,15 +339,13 @@ const rounds = [
     explain: "Bambara groundnuts grow underground like peanuts but are rounder and thicker. Peanuts are elongated and typically found in two-lobed shells."
   },
   {
-    name: "Cowpea vs Crowder Pea",
-    odd: 3,
-    images: [
-      "r12_cowpea_1.jpg",
-      "r12_cowpea_2.jpg",
-      "r12_cowpea_3.jpg",
-      "r12_crowder_odd.jpg"
+    name: "Dried Cowpea vs Dried Crowder",
+  odd: 4,
+  images: ["dried_blackeye.jpg", "dried_pinkeye.jpg", "dried_cream.jpg", "dried_crowder.jpg"],
+
+
     ],
-    explain: "Cowpeas (like black-eyed peas) are smoother and lighter with a distinct 'eye.' Crowder peas are rounder and packed tightly in pods."
+    explain: "All are cowpeas, but look closely at shape. Crowder peas are flattened or blocky from growing tightly packed. The others are more rounded."
   }
 ];
     // ==================== STATE ====================
