Replace cowpea comparison with new cowpea varieties

--- a/index.html
+++ b/index.html
@@ -338,15 +338,17 @@ const rounds = [
     ],
     explain: "Bambara groundnuts grow underground like peanuts but are rounder and thicker. Peanuts are elongated and typically found in two-lobed shells."
   },
-  {
-    name: "Dried Cowpea vs Dried Crowder",
-  odd: 4,
-  images: ["dried_blackeye.jpg", "dried_pinkeye.jpg", "dried_cream.jpg", "dried_crowder.jpg"],
-
-
-    ],
-    explain: "All are cowpeas, but look closely at shape. Crowder peas are flattened or blocky from growing tightly packed. The others are more rounded."
-  }
+ {
+  name: "Cowpea Varieties (Dried)",
+  images: [
+    "dried_blackeye.jpg",
+    "dried_pinkeye.jpg",
+    "dried_cream.jpg",
+    "dried_crowder.jpg"
+  ],
+  oddOneLabel: "dried_crowder.jpg",
+  explain: "Crowder cowpeas are the odd one out — they grow so tightly packed in the pod that the seeds become squared-off or blocky. Blackeye, pinkeye and cream types remain more rounded or kidney-shaped even when dry."
+}
 ];
     // ==================== STATE ====================
     let currentRound = 0;
