--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
           "r10_lablab_1.jpg",
           "r10_lablab_2.jpg",
           "r10_lablab_3.jpg",
-          "r10_lima_bean_odd.jpg"
+          "lima_bean_odd.jpg"
         ],
         explain: "Lablab beans (hyacinth beans) are typically smaller and darker with varied shapes. Lima beans are flatter, lighter in color, and more uniform."
       },
