--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
     <button id="next-btn" style="display:none;">Next Round</button>
 
-    <!-- Proverb section added here -->
+    <!-- Proverb section -->
     <div class="proverb-container" id="proverb-container" style="opacity: 0;">
       <div class="proverb-box">
         <div class="proverb-icon">🌍</div>
@@ -284,122 +284,67 @@
       {
         name: "Banana vs. Plantain",
         odd: 3,
-        images: [
-          "r02_banana_1.jpg",
-          "r02_banana_2.jpg",
-          "r02_banana_3.jpg",
-          "r02_plantain_odd.jpg"
-        ],
+        images: ["r02_banana_1.jpg", "r02_banana_2.jpg", "r02_banana_3.jpg", "r02_plantain_odd.jpg"],
         explain: "Plantains are starchier and usually cooked; bananas are sweeter and often eaten raw."
       },
       {
         name: "Jollof Rice vs. Fried Rice",
         odd: 3,
-        images: [
-          "r03_Jollof_1.jpg",
-          "r03_Jollof_2.jpg",
-          "r03_Jollof_3.jpg",
-          "r03_Fried_odd.jpg"
-        ],
+        images: ["r03_Jollof_1.jpg", "r03_Jollof_2.jpg", "r03_Jollof_3.jpg", "r03_Fried_odd.jpg"],
         explain: "Jollof rice is cooked in a tomato-pepper base, giving it a uniform red-orange color and integrated flavor. Fried rice is stir-fried with visible separate grains, vegetables, and often egg."
       },
       {
         name: "Yam vs. Sweet Potato",
         odd: 3,
-        images: [
-          "r04_Yam_1.jpg",
-          "r04_Yam_2.jpg",
-          "r04_Yam_3.jpg",
-          "r04_sweet_potato_odd.jpg"
-        ],
+        images: ["r04_Yam_1.jpg", "r04_Yam_2.jpg", "r04_Yam_3.jpg", "r04_sweet_potato_odd.jpg"],
         explain: "True yams are starchier with rough brown skin and pale flesh. Sweet potatoes are sweeter, often orange inside, and softer when cooked."
       },
       {
         name: "Ugali vs. Grits",
         odd: 3,
-        images: [
-          "r05_ugali_1.jpg",
-          "r05_ugali_2.jpg",
-          "r05_ugali_3.jpg",
-          "r05_grits_odd.jpg"
-        ],
+        images: ["r05_ugali_1.jpg", "r05_ugali_2.jpg", "r05_ugali_3.jpg", "r05_grits_odd.jpg"],
         explain: "Ugali is firm, molded maize porridge meant to be shaped and dipped. Grits are softer, spoonable, and often served creamy."
       },
       {
         name: "Agege Bread vs White Bread",
         odd: 3,
-        images: [
-          "r06_agege_1.jpg",
-          "r06_agege_2.jpg",
-          "r06_agege_3.jpg",
-          "r06_white_bread_odd.jpg"
-        ],
+        images: ["r06_agege_1.jpg", "r06_agege_2.jpg", "r06_agege_3.jpg", "r06_white_bread_odd.jpg"],
         explain: "Agege bread is soft, stretchy, and slightly sweet with a distinct yellow hue. Standard white sandwich bread is lighter, drier, and evenly sliced."
       },
       {
         name: "Kisra vs Tortilla",
         odd: 3,
-        images: [
-          "r07_kisra_1.jpg",
-          "r07_kisra_2.jpg",
-          "r07_kisra_3.jpg",
-          "r07_tortilla_odd.jpg"
-        ],
+        images: ["r07_kisra_1.jpg", "r07_kisra_2.jpg", "r07_kisra_3.jpg", "r07_tortilla_odd.jpg"],
         explain: "Kisra is a thin fermented sorghum flatbread with a porous texture. Tortillas are typically wheat or corn-based and not fermented in the same way."
       },
       {
         name: "Banku vs Couscous",
         odd: 3,
-        images: [
-          "r08_banku_1.jpg",
-          "r08_banku_2.jpg",
-          "r08_banku_3.jpg",
-          "r08_couscous_odd.jpg"
-        ],
+        images: ["r08_banku_1.jpg", "r08_banku_2.jpg", "r08_banku_3.jpg", "r08_couscous_odd.jpg"],
         explain: "Banku is a fermented corn and cassava dough formed into smooth balls. Couscous consists of tiny steamed semolina grains."
       },
       {
         name: "Kenkey vs Tamales",
         odd: 3,
-        images: [
-          "r09_kenkey_1.jpg",
-          "r09_kenkey_2.jpg",
-          "r09_kenkey_3.jpg",
-          "r09_tamale_odd.jpg"
-        ],
+        images: ["r09_kenkey_1.jpg", "r09_kenkey_2.jpg", "r09_kenkey_3.jpg", "r09_tamale_odd.jpg"],
         explain: "Kenkey is fermented maize dough wrapped in husks and boiled. Tamales are masa-based, often filled, and steamed in husks."
       },
       {
         name: "Lablab vs Lima Beans",
         odd: 3,
-        images: [
-          "r10_lablab_1.jpg",
-          "r10_lablab_2.jpg",
-          "r10_lablab_3.jpg",
-          "lima_bean_odd.jpg"
-        ],
+        images: ["r10_lablab_1.jpg", "r10_lablab_2.jpg", "r10_lablab_3.jpg", "r10_lima_bean_odd.jpg"],
         explain: "Lablab beans (hyacinth beans) are typically smaller and darker with varied shapes. Lima beans are flatter, lighter in color, and more uniform."
       },
       {
         name: "Bambara Groundnut vs Peanut",
         odd: 3,
-        images: [
-          "r11_bambara_1.jpg",
-          "r11_bambara_2.jpg",
-          "r11_bambara_3.jpg",
-          "r11_peanut_odd.jpg"
-        ],
+        images: ["r11_bambara_1.jpg", "r11_bambara_2.jpg", "r11_bambara_3.jpg", "r11_peanut_odd.jpg"],
         explain: "Bambara groundnuts grow underground like peanuts but are rounder and thicker. Peanuts are elongated and typically found in two-lobed shells."
       },
       {
         name: "Cowpea Varieties (Dried)",
         odd: 3,
-        images: [
-          "dried_blackeye.jpg",
-          "dried_pinkeye.jpg",
-          "dried_cream.jpg",
-          "dried_crowder.jpg"
-        ],
+        images: ["dried_blackeye.jpg", "dried_pinkeye.jpg", "dried_cream.jpg", "dried_crowder.jpg"],
         explain: "Crowder cowpeas are the odd one out — they grow so tightly packed in the pod that the seeds become squared-off or blocky. Blackeye, pinkeye and cream types remain more rounded or kidney-shaped even when dry."
       }
     ];
@@ -488,7 +433,6 @@
     let audioCtx = null;
 
     // Store shuffled positions for each round
-    let shuffledIndices = [];
     let correctDisplayIndex = 0;
 
     // ==================== DOM ====================
@@ -631,17 +575,16 @@
       }
     }
 
+    // Load images in background while showing tiles immediately
     function preloadRoundImages(round){
       const urls = round.images.map(fn => imgUrl(fn));
-      return Promise.all(urls.map(url => new Promise(resolve => {
-        const i = new Image();
-        i.onload = () => resolve({ url, ok: true });
-        i.onerror = () => resolve({ url, ok: false });
-        i.src = url;
-      })));
+      urls.forEach(url => {
+        const img = new Image();
+        img.src = url; // This caches the image
+      });
     }
 
-    async function initRound(){
+    function initRound(){
       stopTimer();
       solved = false;
       boardEl.innerHTML = '';
@@ -656,17 +599,11 @@
       // Show a new proverb each round
       displayRandomProverb();
 
-      // preload so timer doesn't start until images are ready
-      const results = await preloadRoundImages(round);
-      const failed = results.filter(r => !r.ok).length;
-
-      loadingEl.textContent = failed ? `Some images failed to load (${failed}).` : '';
-
       // Shuffle the display order
-      shuffledIndices = [0, 1, 2, 3].sort(() => Math.random() - 0.5);
+      const shuffledIndices = [0, 1, 2, 3].sort(() => Math.random() - 0.5);
       correctDisplayIndex = -1;
 
-      // render tiles in shuffled order
+      // render tiles immediately with proper image paths
       for(let pos = 0; pos < 4; pos++){
         const originalIdx = shuffledIndices[pos];
         const fileName = round.images[originalIdx];
@@ -682,6 +619,7 @@
         img.src = imgUrl(fileName);
         img.alt = round.name;
         img.onerror = () => { img.src = makeMissingSvg(`images/${fileName}`); };
+        img.loading = "lazy"; // Helps with performance
 
         tile.appendChild(img);
         boardEl.appendChild(tile);
@@ -691,7 +629,13 @@
         }
       }
 
-      // start timer AFTER images are placed
+      // Preload remaining images in background
+      preloadRoundImages(round);
+      
+      // Clear loading message once tiles are rendered
+      loadingEl.textContent = '';
+
+      // start timer AFTER images are placed (they'll load in background)
       startTimer();
     }
 
@@ -758,7 +702,14 @@
     restartBtn.addEventListener('click', restart);
 
     updateTickButton();
-    initRound();
+    
+    // Start the game with error handling
+    try {
+      initRound();
+    } catch (err) {
+      console.error("Game init failed:", err);
+      setFeedback(`<strong>Error starting game:</strong> ${err.message}<br/>Please refresh the page.`);
+    }
   </script>
 </body>
 </html>
